--- a/app/src/main/res/layout/activity_show_query.xml
+++ b/app/src/main/res/layout/activity_show_query.xml
@@ -17,7 +17,7 @@
         android:layout_centerHorizontal="true"
         android:textStyle="bold"
         android:textSize="25sp"
-        android:text="@string/ChooseQuery" />
+        android:text="@string/DocStation" />
 
     <ScrollView
         android:layout_width="match_parent"
@@ -29,7 +29,7 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
 
             <Button
                 android:layout_width="match_parent"
